# inference_data_viewer

./: CMakeLists.txt  README.md  main.py  tmp.py
network/: config.txt  lookup_table.npy  measurement_data  measurement_label.npy
network/dataset/: test_label.npy  train_label.npy
network/model_0/: keras_metadata.pb  saved_model.pb
network/model_0/variables/: variables.index
src/: Config.h  GetUrg3d.cpp  GetUrg3d.h  inference_data.py  matrix.cpp  matrix.h  send_urg.cpp  send_urg_dummy.cpp
